<resources>
    <string name="app_name">Расписание</string>

    <!-- Preference Titles -->
    <string name="notification_header">Уведомления</string>
    <string name="design">Оформление</string>
    <string name="dark_mode_ru">Тёмная тема</string>
    <string name="strings_counts_title">Количество строк на занятие</string>
    <string name="change_title_of_schedule">Изменить источник расписания</string>
    <string name="updates">Версия приложения</string>
    <string name="check_for_updates">Проверить обновления</string>
    <string name="about">О приложении</string>


    <!-- Notifications Preferences -->
    <string name="notification_title">Получение уведомлений</string>
    <string name="notification_time">Изменить время</string>


    <!-- Channel settings -->
    <string name="channel_name">Everyday notification</string>
    <string name="channel_description">Уведомление для пользователя о расписании на следующий день</string>

    <!-- Examples for views -->
    <string name="example_of_pair_time">11:30\n13:00</string>
    <string name="example_of_subject">Конструирование алгоритмов и структур данных и ещё каких то структур данных два</string>
    <string name="example_of_aud">А301б</string>
    <string name="example_of_date">31</string>
    <string name="example_of_weekday">ПТ</string>
    <string name="current_week">числитель</string>
    <string name="next_week">знаменатель</string>
    <string name="practice">практика</string>
    <string name="lecture">лекция</string>
    <string name="default_time_notification">20:00</string>


    <!-- Other -->
    <string name="settings">Настройки</string>

    <string name="lecturers">lecturers</string>
    <string name="groups">groups</string>
    <string name="isGroupPicked">isGroupPicked</string>
    <string name="savedValueOfUsersPick">savedValueOfUsersPick</string>
    <string name="default_string">default</string>
    <string name="dark_mode">dark_mode</string>

    <string name="URL_LESSONS_JSON"><![CDATA[https://makson-dev.ru/api/getContent.php?v=VERSION&n=Nikita]]></string>
    <string name="URL_LESSONS_JSON_TOKEN"><![CDATA[https://makson-dev.ru/api/getContent.php]]></string>
    <string name="URL_PREFIX"><![CDATA[https://makson-dev.ru]]></string>
    <string name="groups_ru_title">Группы</string>
    <string name="lecturer_title_ru">Преподаватели</string>


    <!--    Examples -->
    <string name="lecturer_example">Жуков С.А</string>


    <!--    Database parameters -->
    <string name="group_parameter">group</string>
    <string name="day_parameter">day</string>
    <string name="even_parameter">even</string>
    <string name="lecturer_parameter">lecturer</string>
    <string name="type_parameter">type</string>

    <!-- Day of weeks-->
    <string name="monday">Понедельник</string>
    <string name="tuesday">Вторник</string>
    <string name="wednesday">Среда</string>
    <string name="thursday">Четверг</string>
    <string name="friday">Пятница</string>
    <string name="saturday">Суббота</string>
    <string name="sunday">Воскресенье</string>


    <string name="notification_status">notification_status</string>
    <string name="time_notification_picker">time_notification_picker</string>
    <string name="notification_time_picker">notification_time_picker</string>
    <string name="card_layout_preference">card_layout_preference</string>
    <string name="NA">NA</string>
    <string name="source_of_schedule">source_of_schedule</string>
    <string name="update_app">update_app</string>
    <string name="about_app">about_app</string>
    <string name="update_folder">updateFolder/</string>

    <string name="version">version</string>

<!--    Upload system-->
    <string name="downloading">Загрузка…</string>
    <string name="title_file_download">Скачивание файла</string>
    <string name="storage_access_required">Чтобы обновить приложение необходим доступ к хранилищу.</string>
    <string name="storage_permission_denied">Отказано в доступе к хранилищу.</string>
    <string name="last_version_installed">Установлена последняя версия приложения.</string>
    <string name="new_version">Обнаружена новая версия</string>
    <string name="update">Обновление</string>
    <string name="update_in_process">Обновление скачивается</string>
    <string name="connection_problem">Проблемы c подключенем к сети.</string>
    <string name="try_again">Попробовать снова</string>
    <string name="need_to_download">Загрузить</string>
    <string name="update_info">Информация об обновлении</string>
    <string name="update_changelog">Основные изменения</string>
    <string name="update_empty_changelog">Описание измененией отсутствует</string>
    <string name="update_warning">Пожалуйста, не закрывайте приложение до окончания загрузки обновления</string>

    <!--    errors-->
    <string name="api_parse_error">Ошибка в структуре ответа JSON</string>
    <string name="register_api_error">Ошибка при регистрации устрйоства</string>
    <string name="unknown_api_error">Неизвестная ошибка</string>
    <string name="timestamp_api">Проблемы с обращением к серверу, попробуйте позже</string>
</resources>