<androidx.preference.PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
            app:title="@string/notification_header">

        <SwitchPreferenceCompat
                app:key="notification_status"
                app:title="@string/notification_title"
                app:defaultValue="false"
        />

        <Preference
                app:key="notification_time_picker"
                app:title="@string/notification_time"
                app:dependency="notification_status"
                app:defaultValue="false"
                app:useSimpleSummaryProvider="true"
        />


        <!--<ListPreference-->
                <!--app:key="reply"-->
                <!--app:title="@string/reply_title"-->
                <!--app:entries="@array/reply_entries"-->
                <!--app:entryValues="@array/reply_values"-->
                <!--app:defaultValue="reply"-->
                <!--app:useSimpleSummaryProvider="true"/>-->

    </PreferenceCategory>

    <!--<PreferenceCategory-->
            <!--app:title="@string/sync_header">-->

        <!--<SwitchPreferenceCompat-->
                <!--app:key="sync"-->
                <!--app:title="@string/sync_title"/>-->

        <!--<SwitchPreferenceCompat-->
                <!--app:key="attachment"-->
                <!--app:title="@string/attachment_title"-->
                <!--app:summaryOn="@string/attachment_summary_on"-->
                <!--app:summaryOff="@string/attachment_summary_off"-->
                <!--app:dependency="sync"/>-->

    <!--</PreferenceCategory>-->

</androidx.preference.PreferenceScreen>
