<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/wrapper"
            android:layout_width="match_parent"

            android:layout_height="match_parent">

        <TextView
                android:id="@+id/pairTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/example_of_pair_time"
                android:textColor="@color/text_color_primary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/subjectName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/example_of_subject"
                android:textColor="@color/text_color_primary"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/pairTime"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:background="@color/practice_color"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:minEms="5"
                android:padding="4dp"
                android:text="@string/practice"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/pairTime"
                app:layout_constraintTop_toBottomOf="@+id/subjectName" />

        <TextView
                android:id="@+id/lecturer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"

                android:layout_marginEnd="8dp"
                android:textColor="@color/text_color_primary"
                app:layout_constraintEnd_toStartOf="@+id/aud"
                app:layout_constraintStart_toEndOf="@+id/type"
                app:layout_constraintTop_toTopOf="@+id/type" />

        <TextView
                android:id="@+id/aud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/example_of_aud"
                android:textColor="@color/text_color_primary"
                app:layout_constraintBaseline_toBaselineOf="@+id/type"
                app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

